2.5.0 (24.03.2019):

* Really optionally change the djvu access and modification times to the
  metadata date.
* Optionally encrypt PDFs.
* Fix race condition when cancelling job.
  Closes bug #317 (cancel tests randomly hang)
* Update to Hungarian translation (thanks to csola)


2.4.0 (24.02.2019):

* Offer to switch from Facing to Reverse after scanning double-sided pages.
  Closes feature request #100
* + Edit profile functionality to scan dialog.
* Reset scan options to defaults before applying profile
* + Split screen view for image and OCR output.
  Closes feature request #57 (Ability to view OCR output and Image at same time)
* Switched to GIMP-like controls - LMB for selecting and MMB for panning.
* + crop to toolbar and RMB menus
* Fix saving as TIFF G3/4 if image not depth 1
* Update to German translation (thanks to Stephan Woidowski)
* Update to Ukranian translation (thanks to Yuri Chornoivan)
* Update to Italian translation (thanks to batman)
  Closes feature request #105 and patch #20 (update italian translation)


2.3.0 (26.01.2019):

* Optionally also include time information in metadata of PDF or DjVU.
  Closes feature request #102 (always sets the time to 0 UTC) (again)
* Reduced "bouncing" effect when dragging OCR output
* Fix update of image viewer/OCR output after deleting a page
* Support different resolutions in x and y directions.
  Closes feature request #101
* Make post-scan PNG conversion optional
* Remember size of multiple message window
* Update to German translation (thanks to Stephan Woidowski)
* Update to Swedish translation (thanks to Anders Jonsson)
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.2.2 (31.12.2018):

* Improved the error message when ImageMagick exceeds its resources.
  Closes bug #303 (I import djvu. . . when exporting to djvu - failed due to
  black and white images)
* Allow foreground colour of text of OCR output to be themed
* Correct some more vbox() calls left over from gtk+-2