@@ -29,7 +29,7 @@ $slist->import_files(
     paths             => ['white.pnm'],
     finished_callback => sub {
         $slist->analyse(
-            page              => $slist->{data}[0][2]{uuid},
+            list_of_pages     => [ $slist->{data}[0][2]{uuid} ],
             finished_callback => sub {
                 is( $slist->{data}[0][2]{std_dev}, 0, 'Found blank page' );
                 is( dirname("$slist->{data}[0][2]{filename}"),
