@@ -32,7 +32,7 @@ $slist->import_files(
             page              => $slist->{data}[0][2]{uuid},
             finished_callback => sub {
                 $slist->analyse(
-                    page              => $slist->{data}[0][2]{uuid},
+                    list_of_pages     => [ $slist->{data}[0][2]{uuid} ],
                     finished_callback => sub {
                         is( $slist->{data}[0][2]{mean}, 0, 'Found dark page' );
                         is( dirname("$slist->{data}[0][2]{filename}"),
