@@ -54,7 +54,7 @@ $slist->import_files(
             command           => 'convert %i -negate %o',
             finished_callback => sub {
                 $slist->analyse(
-                    page              => $slist->{data}[0][2]{uuid},
+                    list_of_pages     => [ $slist->{data}[0][2]{uuid} ],
                     finished_callback => sub {
                         is( $slist->{data}[0][2]{mean},
                             0, 'User-defined with %i and %o' );
