@@ -33,7 +33,7 @@ $slist->import_scan(
     dir               => $dir,
     finished_callback => sub {
         $slist->analyse(
-            page              => $slist->{data}[0][2]{uuid},
+            list_of_pages     => [ $slist->{data}[0][2]{uuid} ],
             finished_callback => sub {
                 is( $slist->{data}[0][2]{mean},
                     0, 'User-defined with %i and %o' );
